--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,32 @@
 {
-"name": "PWA_Mercados",
+"name": "PWA-localização-Mercados",
 "short_name": "Mercados",
-"start_url": "index.html",
-"display": "standalone",
-"theme_color": "#000000",
-"background_color": "#000000",
-"orientation": "any",
 "icons": [
     {
-        "src": "https://www.pwabuilder.com/assets/icons/icon_512.png",
-        "sizes": "512x512",
-        "type": "image/png",
-        "purpose": "maskable"
+        "src": "images/icon-128.png",
+        "sizes": "128x128",
+        "type": "image/png"
     },
     {
-        "src": "https://www.pwabuilder.com/assets/icons/icon_192.png",
-        "sizes": "192x192",
+        "src": "images/icon-256.png",
+        "sizes": "256x256",
+        "type": "image/png"
+    },
+    {
+        "src": "images/icon-512.png",
+        "sizes": "512x512",
+        "type": "image/png"
+    },
+    {
+        "src": "images/icon-256.png",
+        "sizes": "256x256",
         "type": "image/png",
-        "purpose": "any"
+        "purpose": "maskable"
     }
-]
+],
+"lang": "pt-BR",
+"start_url": "/index.html",
+"display": "standalone",
+"background_color": "white",
+"theme_color": "white"
 }
