--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "workbox-routing": "7.0.0",
     "workbox-strategies": "7.0.0",
     "workbox-streams": "7.0.0"
+  },
+  "dependencies": {
+    "serve": "^14.2.1"
   }
 }
