--- a/manifest.json
+++ b/manifest.json
@@ -21,12 +21,13 @@
         "src": "images/icon-256.png",
         "sizes": "256x256",
         "type": "image/png",
-        "purpose": "any maskable"
+        "purpose": "any"
     }
 ],
 "lang": "pt-BR",
 "start_url": "/index.html",
 "display": "standalone",
 "background_color": "white",
-"theme_color": "white"
+"theme_color": "white",
+"scope": "/"
 }
